# fastAPI_HelloWorld

./: pyproject.toml  readME.md  requirements.txt  todo  vercel.json
app/: main.py
